--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,15 +70,15 @@ jobs:
           GOARCH: ${{ matrix.goarch }}
           CGO_ENABLED: 0
         run: |
-          OUTPUT_NAME="tali-${{ inputs.version }}-${{ matrix.name }}${{ matrix.ext }}"
+          OUTPUT_NAME="alidash-${{ inputs.version }}-${{ matrix.name }}${{ matrix.ext }}"
           go build -ldflags="-s -w -X main.version=${{ inputs.version }}" -o "dist/${OUTPUT_NAME}" ./cmd
           echo "BINARY_NAME=${OUTPUT_NAME}" >> $GITHUB_ENV
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: tali-${{ matrix.name }}
-          path: dist/tali-${{ inputs.version }}-${{ matrix.name }}${{ matrix.ext }}
+          name: alidash-${{ matrix.name }}
+          path: dist/alidash-${{ inputs.version }}-${{ matrix.name }}${{ matrix.ext }}
           retention-days: 30
 
   create-release:
@@ -99,8 +99,8 @@ jobs:
       - name: Prepare release assets
         run: |
           mkdir -p release
-          # Copy all tali binaries from artifact directories
-          find artifacts -name "tali-*" -type f -exec cp {} release/ \;
+          # Copy all alidash binaries from artifact directories
+          find artifacts -name "alidash-*" -type f -exec cp {} release/ \;
           # List what we found
           echo "Found artifacts:"
           ls -la artifacts/
@@ -125,22 +125,22 @@ jobs:
             
             ### 支持的平台
             
-            - **macOS Intel (x64)**: `tali-${{ inputs.version }}-macos-intel-x64`
-            - **macOS Apple Silicon (ARM64)**: `tali-${{ inputs.version }}-macos-aarch64`
-            - **Linux x64**: `tali-${{ inputs.version }}-linux-x64`
-            - **Linux ARM64**: `tali-${{ inputs.version }}-linux-arm64`
-            - **Windows x64**: `tali-${{ inputs.version }}-windows-x64.exe`
+            - **macOS Intel (x64)**: `alidash-${{ inputs.version }}-macos-intel-x64`
+            - **macOS Apple Silicon (ARM64)**: `alidash-${{ inputs.version }}-macos-aarch64`
+            - **Linux x64**: `alidash-${{ inputs.version }}-linux-x64`
+            - **Linux ARM64**: `alidash-${{ inputs.version }}-linux-arm64`
+            - **Windows x64**: `alidash-${{ inputs.version }}-windows-x64.exe`
             
             ### 安装说明
             
             1. 下载对应平台的二进制文件
-            2. 重命名为 `tali` (Windows 下为 `tali.exe`)
-            3. 添加执行权限: `chmod +x tali` (Unix 系统)
+            2. 重命名为 `alidash` (Windows 下为 `alidash.exe`)
+            3. 添加执行权限: `chmod +x alidash` (Unix 系统)
             4. 移动到 PATH 目录或直接运行
             
             ### 配置
             
-            创建配置文件 `~/.config/tali.yml` 或按照项目文档进行配置。
+            创建配置文件 `~/.config/alidash.yml` 或按照项目文档进行配置。
             
             ### 校验文件完整性
             
